<resources>
    <string name="app_name">DSMProyecto</string>
    <!-- Breathing Exercise -->
    <string name="breathing_exercise">Ejercicio de Respiración</string>
    <string name="breathing_subtitle">Respiración profunda para aliviar el estrés</string>
    <string name="ready_to_start">Listo para comenzar</string>
    <string name="breathe">Respira</string>
    <string name="paused">Pausado</string>
    <string name="exercise_complete">¡Ejercicio completado!</string>
    <string name="back">Atrás</string>
    <string name="help">Ayuda</string>
    <string name="play_pause">Reproducir/Pausar</string>
    <string name="ok">OK</string>
    <string name="breathing_help_message">Sigue el ritmo del círculo para inhalar y exhalar. Puedes hacerlo con los ojos abiertos o cerrados, guiándote por la animación o el sonido. Te ayudará a relajarte y a reducir el estrés.</string>
    <!-- Pausa Activa -->
    <string name="ayuda_cuidado_visual_contenido">
        \u2022 Ejecuta movimientos oculares lentos y controlados.\n
        \u2022 Mantén los hombros relajados y la cabeza quieta.
    </string>
    <string name="confirm_exit_message">¿Estás seguro que quieres retroceder?</string>
    <string name="confirm_yes">Sí</string>
    <string name="confirm_no">No</string>

    <string name="ayuda_estiramiento_contenido">
        \u2022 Realiza movimientos lentos y controlados\n
        \u2022 Respira profundamente durante cada ejercicio\n
        \u2022 Atento al audio para el cambio de ejercicio\n
        \u2022 Detente si experimentas cualquier molestia
    </string>

</resources>